refactor(java): complete JSON codec ownership